Fixing layout issues

--- a/about/about.css
+++ b/about/about.css
@@ -7,8 +7,9 @@
     font-family: 'Poppins', sans-serif;
     /* font-family: 'Source Sans Pro', sans-serif; */
 }
+
 .navbar{
-    width: 30%;
+    width: 88%;
     margin: auto;
     padding: 15px 0;
     display: flex;
@@ -30,29 +31,27 @@
     font-size: 20px;
 }
 .section{
-    padding-top: 30px;
     width: 100%;
-    min-height: 100vh;
-    /* background-color: #d8ecf3; */
+    padding-bottom: 100px;
     background-color: #049CD8;
 }
+
 .container{
     width: 80%;
-    display: block;
-    margin: auto;
-    padding-top: 100px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px auto 0;
 }
 .content-section{
-    float: left;
-    width: 55%;
+    width: 50%;
 }
 .image-section{
-    float: right;
-    width: 40%;
+    width: 45%;
 }
 .image-section img{
     width: 100%;
-    height: auto;
 }
 .content-section .title{
     text-transform: uppercase;
@@ -71,6 +70,7 @@
     font-family: sans-serif;
     font-size: 18px;
     line-height: 1.5;
+    text-align: justify;
 }
 .content-section .content .button{
     margin-top: 30px;
@@ -100,28 +100,31 @@
     color: gold;
 }
 @media screen and (max-width: 768px){
-    .container{
-        width: 80%;
+    .navbar{
+        width: 35%;
         display: block;
-        margin: auto;
-        padding-top: 50px;
+    }
+    .navbar ul li{
+        display: inline-block;
+    }
+    .container{
+        flex-direction: column;
     }
     .content-section{
-        float: none;
         width: 100%;
+        order: 2;
         display: block;
         margin: auto;
     }
     .image-section{
-        float: none;
-        width: 100%;
+        order: 1;
+        width: 90%;
+        margin-top: 50px;
     }
     .image-section img{
-        width: 100%;
-        height: auto;
-        display: block;
-        margin: auto;
+        border-radius: 10px;
     }
+    
     .content-section .content .button{
         text-align: center;
     }
